<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fooddelieveryapp.Activity.LoginActivity"
    android:background="#ff4500">


    <ImageView
        android:id="@+id/imgLogin_Logo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/food_logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/txtEnterMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogin_Logo"
        android:hint="@string/mobile_number_10_digits"
        android:drawableLeft="@drawable/ic_mobile_number"
        android:padding="8dp"
        android:layout_margin="15dp"
        android:textSize="18sp"
        android:background="#fff"
        android:maxLength="10"
        android:minEms="10"
        android:inputType="number"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_mobile_number" />
    <EditText
        android:id="@+id/txtEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterMobileNo"
        android:padding="8dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_password"
        android:layout_margin="15dp"
        android:textSize="18sp"
        android:background="#fff"
        android:minEms="4"
        android:inputType="textPassword"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterPassword"
        android:layout_marginTop="20dp"
        android:background="#ff0000"
        android:paddingTop="2dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password1"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtSignUpNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>