<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ff4500">

    <TextView
        android:id="@+id/txtEnterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_received_otp_below"
        android:layout_marginTop="30dp"
        android:textColor="#fff"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/txtEnterReceivedOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterOtp"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:hint="@string/otp_4_characters"
        android:background="#fff"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:maxLines="1"
        android:inputType="number"
        android:maxLength="4"
        />
    <EditText
        android:id="@+id/txtEnterNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterReceivedOtp"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:hint="@string/new_password_min_4_characters"
        android:background="#fff"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/txtEnterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterNewPassword"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:hint="@string/new_password_min_4_characters1"
        android:background="#fff"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:maxLines="1"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEnterConfirmPassword"
        android:padding="15dp"
        android:text="Submit"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="#8b0000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        />

</RelativeLayout>