<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context= "com.example.fooddelieveryapp.Activity.ForgotPasswordActivity"
    android:background="#FF4500">



    <ImageView
        android:id="@+id/imgForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:src="@drawable/food_logo"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txtForgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgForgotPassword"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/txtForgotPasswordMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPasswordTextView"
        android:background="#fff"
        android:padding="10dp"
        android:hint="@string/mobile_number_10_digits1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:maxLines="1"
        android:maxLength="10"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/txtForgotPasswordEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPasswordMobileNumber"
        android:background="#fff"
        android:padding="10dp"
        android:hint="@string/email_address1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPasswordEmailAddress"
        android:padding="15dp"
        android:text="@string/next"
        android:textColor="#fff"
        android:background="#8b0000"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

</RelativeLayout>