<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fooddelieveryapp.Activity.RegisterActivity"
    android:background="#ff4500">

    <ImageView
        android:id="@+id/imgBackPressButton"
        android:layout_width="50dp"
        android:layout_height="62dp"
        android:src="@drawable/ic_back_button"
        android:padding="4dp"
        />
    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regiter Your Self"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_marginLeft="70sp"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRegisterYourself"
        android:padding="15dp"
        android:layout_marginTop="45dp"
        android:hint="@string/name_min_3_characters"
        android:background="#fff"
        android:drawableLeft="@drawable/ic_profile"
        android:drawablePadding="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="15"
        />
    <EditText
        android:id="@+id/txtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_marginTop="18dp"
        android:padding="15dp"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:background="#fff"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:maxLines="1"
        android:maxLength="30"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/txtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmailAddress"
        android:layout_marginTop="18dp"
        android:padding="15dp"
        android:hint="@string/mobile_number"
        android:drawableLeft="@drawable/ic_mobile_number"
        android:drawablePadding="8dp"
        android:background="#fff"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:inputType="number"
        android:maxLength="10"
        />
    <EditText
        android:id="@+id/txtDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMobileNumber"
        android:layout_marginTop="18dp"
        android:padding="15dp"
        android:hint="Delivery Address"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="8dp"
        android:background="#fff"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDeliveryAddress"
        android:layout_marginTop="18dp"
        android:padding="15dp"
        android:hint="@string/password_min_4_characters"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:background="#fff"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPassword"
        android:layout_marginTop="18dp"
        android:padding="15dp"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:background="#fff"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtConfirmPassword"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:text="Register"
        android:textStyle="bold"
        android:background="#ff0000"
        android:textColor="#fff"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />


</RelativeLayout>